@@ -43,6 +43,9 @@ void MGL_EXPORT mgl_combine_gr_(uintptr_t *gr, uintptr_t *gr2);
 /// Force preparing the image. It can be useful for OpenGL mode mostly.
 void MGL_EXPORT mgl_finish(HMGL gr);
 void MGL_EXPORT mgl_finish_(uintptr_t *gr);
+/// Force preparing the image and save result into background one.
+void MGL_EXPORT mgl_rasterize(HMGL gr);
+void MGL_EXPORT mgl_rasterize_(uintptr_t *gr);
 
 /// Set tick length
 void MGL_EXPORT mgl_set_tick_len(HMGL gr, double len, double stt);
@@ -305,6 +308,9 @@ void MGL_EXPORT mgl_clf_rgb_(uintptr_t *gr, mreal *r, mreal *g, mreal *b);
 /// Clear up the frame and fill background by specified color
 void MGL_EXPORT mgl_clf_chr(HMGL gr, char col);
 void MGL_EXPORT mgl_clf_chr_(uintptr_t *gr, const char *col, int);
+/// Clear up the frame and fill background by specified color
+void MGL_EXPORT mgl_clf_str(HMGL gr, const char *col);
+void MGL_EXPORT mgl_clf_str_(uintptr_t *gr, const char *col, int);
 
 /// Put further plotting in some region of whole frame.
 void MGL_EXPORT mgl_subplot(HMGL gr, int nx,int ny,int m,const char *style);
